[package]
name = "ccli"
description = "Common command line interface."
documentation = "https://docs.rs/ccli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = [ "derive" ] }
color-eyre.workspace = true
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }
