[package]
name = "conta"
description = "Tool for bumping and publishing crates."
documentation = "https://docs.rs/conta"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ccli.workspace = true
reqwest = { workspace = true, features = [ "blocking", "json", "default-tls" ] }
semver.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
